--- a/mol2/index.html
+++ b/mol2/index.html
@@ -338,7 +338,7 @@
                     <td>sevenkplus</td>
                 </tr>
             </table></br>
-            <a href="#">查看详细统计数据</a>
+            <a href="stat/stat.html">查看详细统计数据</a>
 
             <p>个人赛平均分为<strong>46.89</strong>分。综合考量分数分布后，我们划定了金奖6人（分数线为76.5分）、银奖15人（分数线为50分）、铜奖21人。金奖奖金为每人10元，最佳解题奖奖金为每题20元。</p>
             <p>个人赛最高分为<strong>qramecat乔奕铭</strong>，获得90分！另外，我们更惊讶的是两名选手包揽了五个最佳解题奖！让我们祝贺以上选手！没有获得奖金的参赛者们也不要灰心，一场比赛绝不是语奥的终点，愿您与我们一同在语言学的田野中挥洒汗水、辛勤耕耘，相信一定会有所收获！</p>
