--- a/mol3/index.html
+++ b/mol3/index.html
@@ -325,11 +325,11 @@
             </div>
             <div id="qr-code" class="horizontally-center">
                 <figure>
-                    <img src="group-qr.jpg" alt="Wechat Group QR Code" width="200">
+                    <img src="../group-qr.jpg" alt="Wechat Group QR Code" width="200">
                     <figcaption>微信交流群</figcaption>
                 </figure>
                 <figure>
-                    <img src="account-qr.png" alt="Subscription Account" width="200">
+                    <img src="../account-qr.png" alt="Subscription Account" width="200">
                     <figcaption>微信公众号</figcaption>
                 </figure>
             </div>
