--- a/mol3/index.html
+++ b/mol3/index.html
@@ -320,7 +320,7 @@
         <h2>MOL如何举办？ </h2>
         <div id="contest-content">
             <div>
-                <p>第三届MOL将于2025年<strong>2月3日至9日</strong>在线上举行。本网站已经以<strong>pdf格式公布了题目</strong>。选手可以使用<strong>邮箱拍照或扫描</strong>提交答卷。我们的题目推荐用时与IOL相同，个人赛大约在6个小时左右，团队赛大约在4个小时左右。尽管如此，所有提交入口均会开启一周，以给予选手充分的时间完成比赛。</p>
+                <p>第三届MOL将于2025年<strong>2月3日至9日</strong>在线上举行。本网站将以<strong>pdf格式公布了题目</strong>。选手可以使用<strong>邮箱拍照或扫描</strong>提交答卷。我们的题目推荐用时与IOL相同，个人赛大约在6个小时左右，团队赛大约在4个小时左右。尽管如此，所有提交入口均会开启一周，以给予选手充分的时间完成比赛。</p>
                 <p>提交截止一段时间后，MOL官方会将批改完毕的卷子<strong>以邮箱的方式</strong>发给各位选手，并在官网上公布<strong>答案及解析</strong>。成绩靠前的选手的分数也将会在官网上公布。我们将颁发个人赛、团队赛与总分三种奖项，并发布激励性质的奖金。</p>
             </div>
             <div id="qr-code" class="horizontally-center">
