--- a/mol3/index.html
+++ b/mol3/index.html
@@ -296,7 +296,7 @@
     </nav>
     <header class="vertically-center">
         <div class=" vertically-center" id="lead">
-            <h1>MOL3火热进行中！</h1>
+            <h1>MOL3进行中！</h1>
             <h3>距离比赛结束还有<span id="daycount"></span>天<span id="hourcount"></span>小时</h3>
             <p>比赛时间：2025/2/3-2/9</p>
         </div>
