--- a/mol3/index.html
+++ b/mol3/index.html
@@ -379,6 +379,13 @@
             </div>
         </div>
 
+	<h2>勘误/提示</h2>
+        <div id="hints-content">
+            <h3>【勘误】2/3 08:22 库加马特乔拉语</h3>
+            <p>第二题第3小问的词汇应为bənəːnə而非bənəːn，网站最新的PDF上已经修正了这一错误。</p>
+        </div>
+
+	      
         <h2>往届赛事</h2>
         <div id="past-contests">
             <div class="horizontally-center" id="mol1-link">
