--- a/mol3/index.html
+++ b/mol3/index.html
@@ -327,6 +327,10 @@
             <h3>【勘误】2/3 08:22 库加马特乔拉语</h3>
             <p>第二题第3小问的词汇应为bənəːnə而非bənəːn，网站最新的PDF上已经修正了这一错误。</p>
         </div>
+	<div id="hints-content">
+            <h3>【提示】2/3 09:24 哈鲁埃语</h3>
+            <p>网站最新的PDF上添加了一条“肱二头肌”的注释，并修正了一些不影响做题的编号错误。</p>
+        </div>
        
         <h2>比赛规则</h2>
         <div id="rules-content">
