--- a/mol2/index.html
+++ b/mol2/index.html
@@ -107,6 +107,7 @@
     nav div{
         display:flex;
         align-items:center;
+        column-width:1fr;
     }
     nav img{
         display:block;
@@ -202,6 +203,10 @@
             text-align:center;
             color:#f99e71;
         }
+        nav .large-only{
+            width:10em;
+            text-align:right;
+        }
     }
     @media (min-width:996px){
         body{
@@ -271,12 +276,13 @@
             <img src="logo.png" alt="MOL Logo" width="50">
             <p>MOL半咸水语言学公开赛</p>
         </div>
-        <p class="large-only"><a href="../mol1/index.html">MOL1</a></p>
+        <p class="large-only"><a href="../index.html">返回MOL</a></p>
     </nav>
+    
     <header class="vertically-center">
         <div class=" vertically-center" id="lead">
             <h1>感谢参与MOL2！</h1>
-            <h3>比赛已结束</h3>
+            <p>比赛已结束，看看<a href=../index.html>最新最热MOL</a></p>
             <p>比赛时间：2024/7/8-7/14</p>
         </div>
       </header>
@@ -363,7 +369,7 @@
                 <ol>
                     <li>则天文字/IDS：<a href="best-solution/1.jpg" target="_blank">最佳解</a></li>
                     <li>努哈尔克语：<a href="best-solution/2.jpg" target="_blank">最佳解</a></li>
-                    <li>葛颇彝语：<a href="best-solution/3.jpg" target="_blank">最佳解</a></li>
+                    <li>葛颇彝语：<a href="best-solution/3.jpg" target="_blank">最佳解</a> · <a href="https://www.bilibili.com/video/BV1jtrWYTEKC" target="blank">解析视频</a></li>
                     <li>竞技体操：<a href="best-solution/4.jpg" target="_blank">最佳解</a></li>
                     <li>莱拉语：<a href="best-solution/5.jpg" target="_blank">最佳解</a> · <a href="https://www.bilibili.com/video/BV1mFYwe4EXu" target="blank">解析视频</a></li>
                 </ol>
