--- a/mol1/index.html
+++ b/mol1/index.html
@@ -233,7 +233,7 @@
             <img src="logo.png" alt="MOL Logo" width="50">
             <p>MOL半咸水语言学公开赛</p>
         </div>
-        <p class="large-only"><a href="../index.html">返回MOL</a></p>
+        <p class="large-only"><a href="../index.html">最新MOL</a></p>
     </nav>
     <header class="vertically-center">
         <div class=" vertically-center" id="lead">
