--- a/mol3/index.html
+++ b/mol3/index.html
@@ -333,6 +333,11 @@
             <h3>【提示】2/3 09:24 哈鲁埃语</h3>
             <p>网站最新的PDF上添加了一条“肱二头肌”的注释，并修正了一些不影响做题的编号错误。</p>
         </div>
+	</div>
+	    <div id="hints-content">
+            <h3>【提示】2/4 09:24 阿卡德语</h3>
+            <p>格律是诗歌中节奏与声音的特定规律，在本题中特指主重音、次重音、非重音三类音节的排布规律。该提示已更新在网站最新的PDF中。</p>
+        </div>
        
         <h2>比赛规则</h2>
         <div id="rules-content">
