--- a/mol3/index.html
+++ b/mol3/index.html
@@ -299,7 +299,7 @@
     <header class="vertically-center">
         <div class=" vertically-center" id="lead">
             <h1>欢迎来到MOL3！</h1>
-            <h3>距离比赛结束还有<span id="daycount"></span>天<span id="hourcount"></span>小时</h3>
+            <h3>离比赛结束还有<span id="daycount"></span>天<span id="hourcount"></span>小时</h3>
             <p>比赛时间：2025/2/3-2/9</p>
         </div>
       </header>
