--- a/mol3/index.html
+++ b/mol3/index.html
@@ -338,6 +338,11 @@
             <h3>【提示】2/4 09:24 阿卡德语</h3>
             <p>格律是诗歌中节奏与声音的特定规律，在本题中特指主重音、次重音、非重音三类音节的排布规律。该提示已更新在网站最新的PDF中。</p>
         </div>
+	</div>
+	    <div id="hints-content">
+            <h3>【提示】2/5 11:29 阿卡德语</h3>
+            <p>在阿卡德语诗歌中，“重音不相邻”这一原则是普遍的，作用范围包括但不限于词内、词间、音步间、诗小节间、诗行间。该提示不会更新在PDF中。</p>
+        </div>
        
         <h2>比赛规则</h2>
         <div id="rules-content">
