--- a/mol3/index.html
+++ b/mol3/index.html
@@ -316,11 +316,11 @@
                 <p>请将每道题的答案分别写在一张A4纸上，拍照或扫描答案，提交至邮箱mirturlol@163.com</p>
            </div>
            <div>
-                <!--<h3>赛后问卷</h3>
+                <h3>赛后问卷</h3>
                 <img src="wjx-qr.jpg">
                 <p>问卷星二维码 <strong>►</strong></p>
-                <p><a href="https://www.wjx.cn/vm/hwSZYY7.aspx#" target="_blank">问卷星链接</a></p>
-           -->
+                <p><a href="https://www.wjx.cn/vm/wiVRGcc.aspx" target="_blank">问卷星链接</a></p>
+
            </div>
         </div>
 
