--- a/mol3/index.html
+++ b/mol3/index.html
@@ -332,7 +332,7 @@
     <header class="vertically-center">
         <div class=" vertically-center" id="lead">
             <h1>欢迎来到MOL3！</h1>
-            <h3>离比赛结束还有<span id="daycount"></span>天<span id="hourcount"></span>小时</h3>
+            <h3>比赛已结束，火速改卷中！</h3>
             <p>比赛时间：2025/2/3-2/9</p>
         </div>
       </header>
@@ -345,8 +345,8 @@
                 <p><a href="第三届MOL个人赛视频材料.zip" target="_blank">补充材料</a>（重要！务必下载）</p>
             </div>
            <div>
-                <h3>提交入口</h3>
-                <p style="text-align:left;">请将每道题的答案分别写在一张A4纸上，拍照或扫描答案，提交至邮箱mirturlol@163.com</p>
+                <h3>答案</h3>
+                <p><a href="第三届MOL个人赛答案.pdf" target="_blank">个人赛答案及评分标准</a></p>
            </div>
            <div>
                 <h3>赛后问卷</h3>
@@ -422,7 +422,7 @@
         <h2>MOL如何举办？ </h2>
         <div id="contest-content">
             <div>
-                <p>第三届MOL于2025年<strong>2月3日至9日</strong>在线上举行。本网站已经以<strong>pdf格式公布了题目</strong>。选手可以使用<strong>邮箱拍照或扫描</strong>提交答卷。我们的题目推荐用时与IOL相同，大约在6个小时左右。尽管如此，所有提交入口均会开启一周，以给予选手充分的时间完成比赛。</p>
+                <p>第三届MOL已于2025年<strong>2月3日至9日</strong>在线上举行。本网站已经以<strong>pdf格式公布了题目</strong>。选手可以使用<strong>邮箱拍照或扫描</strong>提交答卷。我们的题目推荐用时与IOL相同，大约在6个小时左右。尽管如此，所有提交入口均会开启一周，以给予选手充分的时间完成比赛。</p>
                 <p>提交截止一段时间后，MOL官方会将批改完毕的卷子<strong>以邮箱的方式</strong>发给各位选手，并在官网上公布<strong>答案及解析</strong>。成绩靠前的选手的分数也将会在官网上公布。我们将颁发个人赛与总分两种奖项，并发布激励性质的奖金。</p>
             </div>
             <div class="qr-code" class="horizontally-center">
