--- a/mol3/index.html
+++ b/mol3/index.html
@@ -337,7 +337,7 @@
         </div>
       </header>
       <main>
-        <h2>试卷/提交入口</h2>
+        <h2>试题与答案</h2>
         <div id="test-content">
             <div>
                 <h3>试题</h3>
