--- a/mol1/index.html
+++ b/mol1/index.html
@@ -243,7 +243,7 @@
         </div>
       </header>
       <main>
-        <h2><a href="第一届MOL试题.pdf" target="_blank" style="text-decoration: none;">试卷链接（PDF）</a></h2>
+        <h2><a href="第一届MOL个人赛题目.pdf" target="_blank" style="text-decoration: none;">试卷链接（PDF）</a></h2>
         <h2>比赛结果</h2>
         <div id="results-content">
             <p>第一届MOL获得了超150次关注，其中32名选手正式参与了比赛并提交了答卷，均分61.03分。</p>
@@ -313,7 +313,7 @@
         </div>
         <h2>答案解析</h2>
         <div id="solution-content">
-            <p><a href="第一届MOL解析.pdf" target="_blank">答案及评分标准</a></p>
+            <p><a href="第一届MOL个人赛答案.pdf" target="_blank">答案及评分标准</a></p>
             <ol>
                 <li>声律启蒙：<a href="best-solution/1.jpg" target="_blank">最佳解</a>·<a href="https://www.bilibili.com/video/BV1tK421y73Y">讲解视频</a></li>
                 <li>天诺语：<a href="https://www.bilibili.com/video/BV1zv421k7S2">讲解视频</a></li>
@@ -321,7 +321,6 @@
                 <li>印地语：<a href="best-solution/4.jpg" target="_blank">最佳解</a>·<a href="https://www.bilibili.com/video/BV18m41117s7">讲解视频</a></li>
                 <li>穆鲁伊维托托语：<a href="best-solution/5.jpg" target="_blank">最佳解</a>·<a href="https://www.bilibili.com/video/BV1A1421X7Bm">讲解视频</a></li>
             </ol>
-            <p><strong><em>*讲解视频将逐个更新，敬请期待</em></strong></p>
         </div>
         <h2>关于我们</h2>
         <div id="about-content">
