--- a/mol3/index.html
+++ b/mol3/index.html
@@ -332,7 +332,7 @@
     <header class="vertically-center">
         <div class=" vertically-center" id="lead">
             <h1>欢迎来到MOL3！</h1>
-            <h3>比赛已结束，火速改卷中！</h3>
+            <h3>比赛已结束，敬请期待下届MOL！</h3>
             <p>比赛时间：2025/2/3-2/9</p>
         </div>
       </header>
@@ -397,7 +397,7 @@
 
         <h2>赛事介绍</h2>
         <div id="announcement">
-            <p><em><a href="#about-title">这是哪里？MOL是<span class="strike">物质的量的单位还是载人轨道实验室还是商船三井公司？</span></a></em></p>
+            <p><em><a href="#about-title">这是哪里？MOL是<span class="strike">物质的量的单位还是载人轨道实验室还是商船三井公司还是胸骨上窝？</span></a></em></p>
             <p>第三届半咸水语奥公开赛（MOL3）火热进行中！无论您是否了解语言学或语奥，是否参与了前两届MOL，都可以自由了解并参与我们的比赛，在“半咸水”的文化海洋中尽情畅游。</p>
             <p>与第一第二届相同，第三届MOL依旧为期<strong>七天</strong>，给予选手们充分的时间完赛。另外，我们依旧保持着组委会完全由IOL国家队员组成的优良传统，严选题目质量，确保选手们在做题时有足够好的体验与足够丰富的收获。以及最重要地，第三届MOL依旧<strong>无需报名，无需缴费，无参赛门槛</strong>，并且会发放激励性质的<strong>获奖证书与奖金</strong>。本届MOL的赛制和MOL1基本相同，仅有<strong>五道个人赛</strong>试题，每题20分，共计100分。本次比赛<strong>没有团队赛</strong>，但依旧欢迎大家在交流群内分享讨论不涉及题目答案的内容。经过测题组的反复检验，本届MOL绝对有质量保障，请大家放心食用！</p>
         </div>
@@ -423,7 +423,7 @@
         <div id="contest-content">
             <div>
                 <p>第三届MOL已于2025年<strong>2月3日至9日</strong>在线上举行。本网站已经以<strong>pdf格式公布了题目</strong>。选手可以使用<strong>邮箱拍照或扫描</strong>提交答卷。我们的题目推荐用时与IOL相同，大约在6个小时左右。尽管如此，所有提交入口均会开启一周，以给予选手充分的时间完成比赛。</p>
-                <p>提交截止一段时间后，MOL官方会将批改完毕的卷子<strong>以邮箱的方式</strong>发给各位选手，并在官网上公布<strong>答案及解析</strong>。成绩靠前的选手的分数也将会在官网上公布。我们将颁发个人赛与总分两种奖项，并发布激励性质的奖金。</p>
+                <p>MOL组委会已将分数情况、参赛证书、奖金<strong>以邮箱的方式</strong>发还给各位选手，并在官网上公布了<strong>答案及解析</strong>。成绩靠前的选手的分数，以及部分统计数据，都将会在官网上公布。敬请期待！</p>
             </div>
             <div class="qr-code" class="horizontally-center">
                 <figure>
