--- a/mol3/index.html
+++ b/mol3/index.html
@@ -441,8 +441,8 @@
                     <li>哈鲁埃语：<a href="best-solution/1.pdf" target="_blank">最佳解</a></li>
                     <li>库加马特乔拉语：<a href="best-solution/2.pdf" target="_blank">最佳解</a></li>
                     <li>斯多基符号系统：<a href="best-solution/3.jpg" target="_blank">最佳解</a></li>
-                    <li>阿卡德语格律：<a href="best-solution/4.pdf" target="_blank">最佳解</a></li>
-                    <li>阿扎格贝语：<a href="best-solution/5.jpg" target="_blank">最佳解</a> · <a href="https://www.bilibili.com/video/BV1jmNDerERM" target="blank">解析视频</a></li>
+                    <li>阿卡德语格律：<a href="best-solution/4.pdf" target="_blank">最佳解</a> · <a href="https://www.bilibili.com/video/BV1jmNDerERM" target="blank">解析视频</a></li>
+                    <li>阿扎格贝语：<a href="best-solution/5.jpg" target="_blank">最佳解</a></li>
                 </ol>
             </div>
         </div>
