--- a/mol1/index.html
+++ b/mol1/index.html
@@ -326,7 +326,7 @@
         <div id="about-content">
             <div>
                 <h3>MOL是什么？</h3>
-                <p><strong>MOL(Mirturl Linguistics Open)</strong>是由2023年国际语言学奥林匹克竞赛中国国家队自主组织的<strong>语言学公开挑战赛</strong>。本比赛采取<strong>线上进行</strong>的形式，不设任何年龄或年级限制，不收取任何报名费用，<strong>无任何参赛门槛</strong>，旨在向社会推广语言学这一多元多彩的学科。
+                <p><strong>MOL(Mirturl Linguistics Open)</strong>是由2023年国际语言学奥林匹克竞赛中国国家队自主创办的<strong>语言学公开挑战赛</strong>。本比赛采取<strong>线上进行</strong>的形式，不设任何年龄或年级限制，不收取任何报名费用，<strong>无任何参赛门槛</strong>，旨在向社会推广语言学这一多元多彩的学科。
                 </p>
             </div>
             <div>
@@ -346,7 +346,7 @@
             <p>四、MOL官方将以客观、公正、公开的标准进行评卷，并公示结果。MOL官方有权对判定雷同的答卷不予评分。</p>
             <p><strong>祝您好运！</strong></p>
         </div>
-        <h2>勘误/提示</h2>
+        <h2>勘误/提示（均已在新版PDF中修复）</h2>
         <div id="hints-content">
             <h3>【勘误】2/4 02:44 凯特语</h3>
             <p>第(12)问题干有所改动，目前的pdf中已修正。</p>
@@ -386,6 +386,7 @@
         <footer>
         半咸水QwQ 关注MOL喵<br>
         微信公众号：MOL半咸水语言学公开赛<br>
+	小红书：：MOL半咸水语言学公开赛<br>
         邮箱：mirturlol@163.com
         </footer>
       </main>
