--- a/mol2/index.html
+++ b/mol2/index.html
@@ -290,15 +290,17 @@
         <h2>MOL2圆满收工！</h2>
         <div id="results-content">
             <p>感谢各位的参与与支持！MOL would be impossible without you ❤</p>
-            <p>第二届MOL获得了<strong>超200次关注</strong>，共<strong>79人</strong>提交答卷</p>
-            <p>详细分值情况我们已通过邮件返还给每一位选手。奖金已经发放。
-            </p>
+            <p>第二届MOL获得了<strong>超200次关注</strong>，共<strong>79人</strong>提交答卷。</p>
+            <p>详细分值情况我们已通过邮件返还给每一位选手。奖金已经发放。</p>
             <p>恭喜获奖的选手！</p>
+	    <p></p>
+		
             <h3>总分</h3>
             <p>MOL2以<strong>个人*80%+团队*20%</strong>的方式计算了总分奖（<strong>仅有两项比赛都参与的选手才可获得</strong>），共计32人获得。</p>
             <p>在这32名选手中，个人赛均分为<strong>51.86</strong>分，团队赛均分为<strong>51.29</strong>分，总分均分为<strong>51.75</strong>分。综合考量分数分布后，我们划定了金奖5人（分数线为76.46分）、银奖11人（分数线为56.3分）、铜奖16人。对于这些选手，我们为团队赛金奖颁发每人10元，为总分金奖再颁发每人10元。</p>
-            <p>个人赛最高分qramecat乔奕铭选手以领先优势毫无悬念地获总分第一名（85.9分）！总分前五分别为：<strong>qramecat乔奕铭、黄宇潇、Brightly_、ItzSetrods、Sukilin</strong>。相关信息我们已经与奖状一同发还大家的邮箱，请于近几日随时查收哦！</p>
-
+            <p>个人赛最高分<strong>qramecat乔奕铭选手</strong>以领先优势毫无悬念地获总分第一名（85.9分）！总分前五分别为：<strong>qramecat乔奕铭、黄宇潇、Brightly_、ItzSetrods、Sukilin</strong>。相关信息我们已经与奖状一同发还大家的邮箱，请于近几日随时查收哦！</p>
+	    <p></p>
+		
             <h3>个人赛</h3>
             <table id="results-table">
                 <tr>
@@ -348,20 +350,21 @@
 
             <p>个人赛平均分为<strong>46.89</strong>分。综合考量分数分布后，我们划定了金奖6人（分数线为76.5分）、银奖15人（分数线为50分）、铜奖21人。金奖奖金为每人10元，最佳解题奖奖金为每题20元。</p>
             <p>个人赛最高分为<strong>qramecat乔奕铭</strong>，获得90分！另外，我们更惊讶的是两名选手包揽了五个最佳解题奖！让我们祝贺以上选手！没有获得奖金的参赛者们也不要灰心，一场比赛绝不是语奥的终点，愿您与我们一同在语言学的田野中挥洒汗水、辛勤耕耘，相信一定会有所收获！</p>
-
+	    <p></p>
+		
             <h3>团队赛</h3>
             <p>本次比赛中，共有<strong>20支队伍</strong>完成了团队赛，分数情况如下：</p>
             <p>团队赛平均分为<strong>48.63分</strong>。我们划定了金奖3组（分数线为87.5分）、银奖8组（分数线为51分）、铜奖9组。团队赛奖金不以团队为单位发布。</p>
             <p>我们在赛前根本没预料到大家的团队分数能达到这么高，更不敢想象第一名会来到<strong>97.5分</strong>！在本次比赛中，<strong>“我打语竞，真的假的？”</strong>以97.5分获得冠军，<strong>“白兔保护队”</strong>以97分获得亚军，<strong>“simplicissimus队”</strong>以87.5分获得季军。这三支金奖队伍的实力实在是太不可思议了！组委会对他们敏锐的观察力、出色的团队协作与坚持不懈的努力感到由衷敬佩！</p>
             <p>无论分数如何，团队赛都是一个团队合作的过程，因此需要的不只有解题，更重要的是相处、磨合、互相信任、互相配合、互相支持与理解……相信无论是哪一支队伍，都一定能在完成MOL2团队赛的过程中收获到团队合作的宝贵经验，乃至结识珍贵的友谊！<strong>语奥一线牵，相逢即是缘，</strong>希望大家喜欢我们的团队赛，也在以后其他团队活动中更上一层楼！</p>
-
-
+	    <p></p>
+		
         <h2>试卷/解析</h2>
         <div id="test-content">
             <div>
                 <h3>试题</h3>
-                <p><a href="./第二届MOL个人赛题目.pdf" target="_blank">个人赛试卷</a> | <a href="./第二届MOL团队赛题目.pdf" target="_blank">团队赛试卷</a></p>
-                <p><a href="./纳瓦特尔语录音.zip" target="_blank">团队赛音频</a>（重要！务必下载）</p>
+                <p>题目：<a href="./第二届MOL个人赛题目.pdf" target="_blank">个人赛试卷</a> | <a href="./第二届MOL团队赛题目.pdf" target="_blank">团队赛试卷</a></p>
+                <p>材料：<a href="./纳瓦特尔语录音.zip" target="_blank">团队赛音频</a>（重要！务必下载）</p>
                 <p>答案：<a href="./第二届MOL个人赛答案.pdf" target="_blank">个人赛答案</a> | <a href="./第二届MOL团队赛答案.pdf" target="_blank">团队赛答案</a></p>
             </div>
            <div id="solution-content">
@@ -380,8 +383,8 @@
         <div id="announcement">
             <p><em><a href="#about-title">这是哪里？MOL是<span class="strike">物质的量的单位还是载人轨道实验室还是商船三井公司？</span></a></em></p>
             <p><a href="../mol1/index.html">回顾：第一届MOL</a> | <a href="../logo_design.html">Logo设计介绍</a></p>
-            <p><strong>第二届半咸水语奥公开赛（MOL2）火热进行中！</strong>无论您是否了解语言学或语奥，是否参与了今年寒假的第一届MOL，都可以自由了解并参与我们的比赛，在“半咸水”的文化海洋中尽情畅游。</p>
-            <p>与第一届相同，第二届MOL依旧为期<strong>七天</strong>，给予选手们充分的时间完赛。另外，我们依旧保持着组委会完全由IOL中国国家队员组成的优良传统，严选题目质量，确保选手们在做题时有足够好的体验与足够丰富的收获。以及最重要地，第二届MOL依旧<strong>无需报名，无需缴费，无参赛门槛</strong>，并且会发放激励性质的<strong>奖状与奖金</strong>。除第一届MOL组委会的成员之外，又有一群<strong>新的小伙伴</strong>加入了我们！他们来自IOL2022和2024的国家队，在语奥试题的制作和评测上都秉有绝对的专业性与负责的态度，无疑令我们尚处于襁褓中的半咸水赛事增光添彩！</p>
+            <p><strong>第二届半咸水语奥公开赛（MOL2）已经落下帷幕。</strong>无论您是否了解语言学或语奥，是否参与了今年寒假的第一届MOL，都可以自由了解并参与我们的比赛，在“半咸水”的文化海洋中尽情畅游。</p>
+            <p>与第一届相同，第二届MOL依旧为期<strong>七天</strong>，给予选手们充分的时间完赛。另外，我们依旧保持着组委会完全由IOL队员组成的优良传统，严选题目质量，确保选手们在做题时有足够好的体验与足够丰富的收获。以及最重要地，第二届MOL依旧<strong>无需报名，无需缴费，无参赛门槛</strong>，并且会发放激励性质的<strong>奖状与奖金</strong>。除第一届MOL组委会的成员之外，又有一群<strong>新的小伙伴</strong>加入了我们。他们来自IOL2022和2024的国家队，在语奥试题的制作和评测上都秉有绝对的专业性与负责的态度，无疑令我们尚处于襁褓中的半咸水赛事增光添彩！</p>
             <p>除此之外，第二届MOL在个人赛的基础上添加了<strong>团队赛</strong>，更加贴近IOL的赛程设置。</p>
         </div>
         
@@ -389,7 +392,7 @@
         <div id="about-content">
             <div>
                 <h3>MOL是什么？</h3>
-                <p><strong>MOL(Mirturl Linguistics Open)</strong>是由2023年国际语言学奥林匹克竞赛中国国家队自主组织的<strong>语言学公开挑战赛</strong>。本比赛采取<strong>线上进行</strong>的形式，不设任何年龄或年级限制，不收取任何报名费用，<strong>无任何参赛门槛</strong>，旨在向社会推广语言学这一多元多彩的学科。
+                <p><strong>MOL(Mirturl Linguistics Open)</strong>是由2023年国际语言学奥林匹克竞赛中国国家队自主创办的<strong>语言学公开挑战赛</strong>。本比赛采取<strong>线上进行</strong>的形式，不设任何年龄或年级限制，不收取任何报名费用，<strong>无任何参赛门槛</strong>，旨在向社会推广语言学这一多元多彩的学科。
                 </p>
             </div>
             <div>
@@ -405,8 +408,8 @@
         <h2>MOL如何举办？ </h2>
         <div id="contest-content">
             <div>
-                <p>第二届MOL于2024年<strong>7月8日至14日</strong>在线上举行。本网站已经以<strong>pdf格式公布了题目</strong>。选手可以使用<strong>邮箱拍照或扫描</strong>提交答卷。我们的题目推荐用时与IOL相同，个人赛大约在6个小时左右，团队赛大约在4个小时左右。尽管如此，所有提交入口均会开启一周，以给予选手充分的时间完成比赛。</p>
-                <p>提交截止一段时间后，MOL官方会将批改完毕的卷子<strong>以邮箱的方式</strong>发给各位选手，并在官网上公布<strong>答案及解析</strong>。成绩靠前的选手的分数也将会在官网上公布。我们将颁发个人赛、团队赛与总分三种奖项，并发布激励性质的奖金。</p>
+                <p>第二届MOL已于2024年<strong>7月8日至14日</strong>在线上举行。本网站以<strong>pdf格式公布了题目</strong>。选手可以使用<strong>邮箱拍照或扫描</strong>提交答卷。我们的题目推荐用时与IOL相同，个人赛大约在6个小时左右，团队赛大约在4个小时左右。尽管如此，所有提交入口均开启一周，以给予选手充分的时间完成比赛。</p>
+                <p>提交截止一段时间后，MOL官方已将批改完毕的卷子<strong>以邮箱的方式</strong>发还给各位选手，并在官网上公布<strong>答案及解析</strong>。成绩靠前的选手的分数也在官网上公布。我们颁发了个人赛、团队赛与总分三种奖项，并发布了激励性质的奖金。</p>
             </div>
             <div id="qr-code" class="horizontally-center">
                 <figure>
@@ -422,6 +425,7 @@
         <footer>
         半咸水QwQ 关注MOL喵<br>
         微信公众号：MOL半咸水语言学公开赛<br>
+	小红书：MOL半咸水语言学公开赛<br>
         邮箱：mirturlol@163.com
         </footer>
       </main>
