--- a/mol3/index.html
+++ b/mol3/index.html
@@ -413,7 +413,7 @@
     </nav>
     <header class="vertically-center">
         <div class=" vertically-center" id="lead">
-            <h1>欢迎来到MOL3！</h1>
+            <h1>感谢参与MOL3！</h1>
             <h3>比赛已结束，敬请期待下届MOL！</h3>
             <p>比赛时间：2025/2/3-2/9</p>
         </div>
@@ -471,7 +471,7 @@
         <div id="rules-content">
             <p>一、我们鼓励<strong>独立完成</strong>MOL，也欢迎您与同学或朋友进行<strong>适度讨论</strong>，但<strong>不鼓励您上网搜索、查询资料、直接交流答案</strong>。题干中提供的信息足以推出所有答案，无需参考外部资料。
             </p>
-            <p>二、每道题目的答案请尽量在一张<strong>单面A4空白打印纸</strong>上书写，字迹尽量清晰工整。如果您直接在电子文档中进行书写，也请尽量书写清晰。如果条件不允许，也可以使用一张单面的其他类型纸张。如果有一张纸实在书写不下的题目，邮件和问卷中都允许额外上传一个附件，请谨慎使用。
+            <p>二、每道题目的答案请尽量在一张<strong>单面A4空白打印纸</strong>上书写，字迹尽量清晰工整。如果您直接在电子文档中进行书写，也请尽量书写清晰。如果条件不允许，也可以使用一张单面的其他类型纸张或多张纸张。<strong>请不要在同一张纸上书写多道题目的答案！</strong>
             </p>
             <p>三、若题目要求书写规则，规则的书写方式请参考<a href="../rules-guideline.html" target="_blank">规则书写</a>。</p>
             <p>四、MOL官方将以客观、公正、公开的标准进行评卷，并公示结果。MOL官方有权对判定雷同的答卷不予评分。</p>
@@ -482,7 +482,7 @@
         <div id="announcement">
             <p><em><a href="#about-title">这是哪里？MOL是<span class="strike">物质的量的单位还是载人轨道实验室还是商船三井公司还是胸骨上窝？</span></a></em>
             </p>
-            <p>第三届半咸水语奥公开赛（MOL3）火热进行中！无论您是否了解语言学或语奥，是否参与了前两届MOL，都可以自由了解并参与我们的比赛，在“半咸水”的文化海洋中尽情畅游。</p>
+            <p>第三届半咸水语奥公开赛（MOL3）已经结束。无论您是否了解语言学或语奥，是否参与了前两届MOL，都可以自由了解并参与我们的比赛，在“半咸水”的文化海洋中尽情畅游。</p>
             <p>与第一第二届相同，第三届MOL依旧为期<strong>七天</strong>，给予选手们充分的时间完赛。另外，我们依旧保持着组委会完全由IOL国家队员组成的优良传统，严选题目质量，确保选手们在做题时有足够好的体验与足够丰富的收获。以及最重要地，第三届MOL依旧<strong>无需报名，无需缴费，无参赛门槛</strong>，并且会发放激励性质的<strong>获奖证书与奖金</strong>。本届MOL的赛制和MOL1基本相同，仅有<strong>五道个人赛</strong>试题，每题20分，共计100分。本次比赛<strong>没有团队赛</strong>，但依旧欢迎大家在交流群内分享讨论不涉及题目答案的内容。经过测题组的反复检验，本届MOL绝对有质量保障，请大家放心食用！
             </p>
         </div>
@@ -492,7 +492,7 @@
             <div>
                 <h3>MOL是什么？</h3>
                 <p><strong>MOL(Mirturl Linguistics
-                        Open)</strong>是由2023年国际语言学奥林匹克竞赛中国国家队自主组织的<strong>语言学公开挑战赛</strong>。本比赛采取<strong>线上进行</strong>的形式，不设任何年龄或年级限制，不收取任何报名费用，<strong>无任何参赛门槛</strong>，旨在向社会推广语言学这一多元多彩的学科。
+                        Open)</strong>是由2023年国际语言学奥林匹克竞赛中国国家队自主创办的<strong>语言学公开挑战赛</strong>。本比赛采取<strong>线上进行</strong>的形式，不设任何年龄或年级限制，不收取任何报名费用，<strong>无任何参赛门槛</strong>，旨在向社会推广语言学这一多元多彩的学科。
                 </p>
             </div>
             <div>
@@ -548,6 +548,7 @@
         <footer>
             半咸水QwQ 关注MOL喵<br>
             微信公众号：MOL半咸水语言学公开赛<br>
+            小红书：MOL半咸水语言学公开赛<br>
             邮箱：mirturlol@163.com
         </footer>
     </main>
