--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://mol4.cn">
+        <meta http-equiv="refresh" content="0; url=index.html">
         <script type="text/javascript">
-            window.location.href = "https://mol4.cn"
+            window.location.href = "index.html"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, follow this <a href='https://mol4.cn'>link to example</a>.
+        If you are not redirected automatically, follow this <a href='index.html'>link to example</a>.
     </body>
 </html>
+
 
