--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=index.html">
+        <meta http-equiv="refresh" content="0; url=./mol3/index.html">
         <script type="text/javascript">
-            window.location.href = "index.html"
+            window.location.href = "./mol3/index.html"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, follow this <a href='index.html'>link to example</a>.
+        If you are not redirected automatically, follow this <a href='./mol3/index.html'>link to example</a>.
     </body>
 </html>
+
 
 
