--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=./mol3/index.html">
+        <meta http-equiv="refresh" content="0; url=archive/mol4/Mol4 比赛系统.html">
         <script type="text/javascript">
-            window.location.href = "./mol3/index.html"
+            window.location.href = "archive/mol4/Mol4 比赛系统.html"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
-        If you are not redirected automatically, follow this <a href='./mol3/index.html'>link to example</a>.
+        若自动跳转失败，请点击<a href='archive/mol4/Mol4 比赛系统.html'>此链接</a>.
     </body>
 </html>
+
 
 
 
