--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=archive/mol4/Mol4 比赛系统.html">
+        <meta http-equiv="refresh" content="0; url=https://mol4.cn/">
         <script type="text/javascript">
-            window.location.href = "archive/mol4/Mol4 比赛系统.html"
+            window.location.href = "https://mol4.cn/"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
-        若自动跳转失败，请点击<a href='archive/mol4/Mol4 比赛系统.html'>此链接</a>.
+        若自动跳转失败，请点击<a href='https://mol4.cn/'>此链接</a>.
     </body>
 </html>
+
 
 
 
